force-app/main/default/objects/Knowledge__kav/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Information</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>