force-app/main/default/objects/Knowledge__kav/fields/Announcement__c.field-meta.xml
<CustomField>
    <fullName>Announcement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Announcement</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>