force-app/main/default/objects/Knowledge__kav/fields/Article_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Article_Review_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Article Review Date</label>
    <type>Date</type>
</CustomField>