force-app/main/default/objects/Knowledge__kav/fields/Canonical_URL__c.field-meta.xml
<CustomField>
    <fullName>Canonical_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Canonical URL</label>
    <type>Url</type>
</CustomField>