force-app/main/default/objects/Knowledge__kav/fields/CCAT__c.field-meta.xml
<CustomField>
    <fullName>CCAT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCAT</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>