force-app/main/default/objects/Knowledge__kav/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Q.Com FAQs</fullName>
            </value>
            <value>
                <fullName>QAC FAQs</fullName>
            </value>
            <value>
                <fullName>Q.com+KIQ+SFDC</fullName>
            </value>
            <value>
                <fullName>Ticketing Team</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Specific Needs</fullName>
            </value>
            <value>
                <fullName>CCAT</fullName>
            </value>
            <value>
                <fullName>CJO</fullName>
            </value>
            <value>
                <fullName>Service Delivery</fullName>
            </value>
            <value>
                <fullName>Queues &amp; Reports Specialist Team</fullName>
            </value>
            <value>
                <fullName>Interaction guides</fullName>
            </value>
            <value>
                <fullName>Call guide phase 2</fullName>
            </value>
            <value>
                <fullName>Call Guides Phase 2 HBA/AKL</fullName>
            </value>
            <value>
                <fullName>Duty Travel Bookings</fullName>
            </value>
            <value>
                <fullName>Change of FOP Helpdesk Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>