force-app/main/default/objects/Knowledge__kav/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>NoticeBoard Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Memo</fullName>
            </value>
            <value>
                <fullName>COVID-19 Updates</fullName>
                <isActive>false</isActive>
                <label>COVID-19 Updates</label>
            </value>
            <value>
                <fullName>Commercial Policies</fullName>
                <isActive>false</isActive>
                <label>Commercial Policies</label>
            </value>
            <value>
                <fullName>Current Sales</fullName>
                <isActive>false</isActive>
                <label>Current Sales</label>
            </value>
            <value>
                <fullName>Daily Disrupts</fullName>
                <isActive>false</isActive>
                <label>Daily Disrupts</label>
            </value>
            <value>
                <fullName>Domestic &amp; International Travel Requirements</fullName>
                <isActive>false</isActive>
                <label>Domestic &amp; International Travel Requirements</label>
            </value>
            <value>
                <fullName>Fault Reporting</fullName>
                <isActive>false</isActive>
                <label>Fault Reporting</label>
            </value>
            <value>
                <fullName>Internal Topics</fullName>
                <isActive>false</isActive>
                <label>Internal Topics</label>
            </value>
            <value>
                <fullName>Internet, Mobile or QF App Fault Reporting</fullName>
                <isActive>false</isActive>
                <label>Internet, Mobile or QF App Fault Reporting</label>
            </value>
            <value>
                <fullName>Knowledge Index</fullName>
                <isActive>false</isActive>
                <label>Knowledge Index</label>
            </value>
            <value>
                <fullName>Salesforce Updates - Enhancements and Release Notes</fullName>
                <isActive>false</isActive>
                <label>Salesforce Updates - Enhancements and Release Notes</label>
            </value>
            <value>
                <fullName>Tips and Tricks</fullName>
                <isActive>false</isActive>
                <label>Tips and Tricks</label>
            </value>
            <value>
                <fullName>Weekly Wrap - News and Updates from Qantas</fullName>
                <isActive>false</isActive>
                <label>Weekly Wrap - News and Updates from Qantas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>