force-app/main/default/objects/Knowledge__kav/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Used to store the article content</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>