force-app/main/default/objects/Knowledge__kav/fields/FAQ_Number__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FAQ Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>