force-app/main/default/objects/Knowledge__kav/fields/FAQ_Raw_Text_Obsolete__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Raw_Text_Obsolete__c</fullName>
    <description>created for data migration purpose and will be deleted after it&apos;s complete</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FAQ Raw Text (Obsolete)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>