force-app/main/default/objects/Knowledge__kav/fields/Flow_Update__c.field-meta.xml
<CustomField>
    <fullName>Flow_Update__c</fullName>
    <defaultValue>0</defaultValue>
    <description>To update the field and stop further updates being made on the article via the flow</description>
    <label>Flow Update</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>