force-app/main/default/objects/Knowledge__kav/fields/is_Processed__c.field-meta.xml
<CustomField>
    <fullName>is_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Processed?</label>
    <type>Checkbox</type>
</CustomField>