force-app/main/default/objects/Knowledge__kav/fields/POSST_SSU__c.field-meta.xml
<CustomField>
    <fullName>POSST_SSU__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VIP</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>