force-app/main/default/objects/Knowledge__kav/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promotion</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>