force-app/main/default/objects/Knowledge__kav/fields/QAC_SU_Information__c.field-meta.xml
<CustomField>
    <fullName>QAC_SU_Information__c</fullName>
    <description>This field contains additional information for QAC SU Users. Access to this field will only to selective permission sets.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Additional comments for QAC Supervisors</inlineHelpText>
    <label>QAC Supervisor Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>