force-app/main/default/objects/Knowledge__kav/fields/QuestionWithClass__c.field-meta.xml
<CustomField>
    <fullName>QuestionWithClass__c</fullName>
    <description>Add classname &apos;kmQuestion&apos; to the question__c field to make font consistency. Workflow is being used to update this field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Question</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>