force-app/main/default/objects/Knowledge__kav/fields/Team_Coach_Team_Leader_Information__c.field-meta.xml
<CustomField>
    <fullName>Team_Coach_Team_Leader_Information__c</fullName>
    <description>Used to store content only visible for Team Coach / Team Leader Information.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Team Coach / Team Leader Information</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>