force-app/main/default/objects/Knowledge__kav/fields/Visible_in_Noticeboard__c.field-meta.xml
<CustomField>
    <fullName>Visible_in_Noticeboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible in Noticeboard</label>
    <type>Checkbox</type>
</CustomField>