force-app/main/default/objects/Knowledge__kav/recordTypes/BAU_Article.recordType-meta.xml
<RecordType>
    <fullName>BAU_Article</fullName>
    <active>true</active>
    <label>BAU Article</label>
</RecordType>