force-app/main/default/objects/Knowledge__kav/recordTypes/Informational_Article.recordType-meta.xml
<RecordType>
    <fullName>Informational_Article</fullName>
    <active>true</active>
    <description>knowledge articles which inform the reader about a specific topic.</description>
    <label>Informational Article</label>
</RecordType>