force-app/main/default/objects/Knowledge__kav/recordTypes/Internal_Knowledge_QCC_Article.recordType-meta.xml
<RecordType>
    <fullName>Internal_Knowledge_QCC_Article</fullName>
    <active>true</active>
    <description>Knowledge Articles for QCC staff and Internal Users</description>
    <label>Internal Knowledge: QCC Article</label>
</RecordType>