force-app/main/default/objects/Knowledge__kav/recordTypes/Internal_Noticeboard.recordType-meta.xml
<RecordType>
    <fullName>Internal_Noticeboard</fullName>
    <active>true</active>
    <description>Noticeboard announcements</description>
    <label>Internal Noticeboard</label>
</RecordType>