force-app/main/default/objects/Knowledge__kav/recordTypes/Marketing_and_Promotional.recordType-meta.xml
<RecordType>
    <fullName>Marketing_and_Promotional</fullName>
    <active>true</active>
    <description>knowledge articles which notifies readers about a special product or service that is offered as part of marketing or promotional campaign for a limited time.</description>
    <label>Marketing and Promotional</label>
</RecordType>