force-app/main/default/objects/Knowledge__kav/recordTypes/Policy.recordType-meta.xml
<RecordType>
    <fullName>Policy</fullName>
    <active>true</active>
    <description>knowledge articles which outline a set of guidelines for a specific topic.</description>
    <label>Policy</label>
</RecordType>