force-app/main/default/objects/Knowledge__kav/recordTypes/Process_and_Procedure.recordType-meta.xml
<RecordType>
    <fullName>Process_and_Procedure</fullName>
    <active>true</active>
    <description>knowledge articles which have a series of actions to obtain an outcome.</description>
    <label>Process and Procedure</label>
</RecordType>