force-app/main/default/objects/Knowledge__kav/recordTypes/Public_Knowledge_FAQ_s.recordType-meta.xml
<RecordType>
    <fullName>Public_Knowledge_FAQ_s</fullName>
    <active>true</active>
    <description>Public facing knowledge articles - e.g Q.com and QAC FAQ&apos;s</description>
    <label>Public Knowledge: FAQ&apos;s</label>
</RecordType>