force-app/main/default/objects/Knowledge__kav/recordTypes/Qantas_Freight.recordType-meta.xml
<RecordType>
    <fullName>Qantas_Freight</fullName>
    <active>true</active>
    <description>Knowledge record type for Freight related articles.</description>
    <label>Qantas Freight</label>
</RecordType>