force-app/main/default/objects/Knowledge__kav/recordTypes/Qantas_S_D.recordType-meta.xml
<RecordType>
    <fullName>Qantas_S_D</fullName>
    <active>true</active>
    <description>Record type to house all knowledge articles from Sales and Distribution</description>
    <label>Qantas S&amp;D</label>
</RecordType>