force-app/main/default/objects/Knowledge__kav/recordTypes/QCC_Article.recordType-meta.xml
<RecordType>
    <fullName>QCC_Article</fullName>
    <active>true</active>
    <description>Record Type for exposing RightNow link articles</description>
    <label>QCC Article</label>
</RecordType>