force-app/main/default/objects/Knowledge__kav/recordTypes/Triage_Article.recordType-meta.xml
<RecordType>
    <fullName>Triage_Article</fullName>
    <active>true</active>
    <description>knowledge articles that give consultants prompts to find the relevant article based off the customers situation</description>
    <label>Triage Article</label>
</RecordType>