force-app/main/default/objects/Knowledge__kav/listViews/All_Articles.listView-meta.xml
<ListView>
    <fullName>All_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>ARTICLE_CREATED_DATE</columns>
    <columns>Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>IS_CHANNEL_PKB</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Articles</label>
</ListView>