force-app/main/default/objects/Knowledge__kav/listViews/call_guides.listView-meta.xml
<ListView>
    <fullName>call_guides</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TITLE</field>
        <operation>startsWith</operation>
        <value>call guide</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Call Guides</label>
    <sharedTo>
        <group>Project_Lime</group>
    </sharedTo>
</ListView>