force-app/main/default/objects/Knowledge__kav/listViews/Copy_of_LPM_Loyalty_Procedure_Manual1.listView-meta.xml
<ListView>
    <fullName>Copy_of_LPM_Loyalty_Procedure_Manual1</fullName>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>ARTICLE_CASE_ATTACH_COUNT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>Topics</field>
        <operation>includes</operation>
        <value>LPM - Loyalty Procedure Manual</value>
    </filters>
    <filters>
        <field>Topics</field>
        <operation>excludes</operation>
        <value>Airline Partners And QF Codeshares - LPM</value>
    </filters>
    <label>Copy of LPM - Loyalty Procedure Manual</label>
</ListView>