force-app/main/default/objects/Knowledge__kav/listViews/Freight_Articles.listView-meta.xml
<ListView>
    <fullName>Freight_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Qantas_Freight</value>
    </filters>
    <label>Freight Articles</label>
    <sharedTo>
        <roleAndSubordinatesInternal>QF_Freight_Executive</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>