force-app/main/default/objects/Knowledge__kav/listViews/Freight_CSU_Customer_Articles.listView-meta.xml
<ListView>
    <fullName>Freight_CSU_Customer_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Qantas_Freight</value>
    </filters>
    <filters>
        <field>ARTICLE_NUMBER</field>
        <operation>contains</operation>
        <value>1255,1256,1259,1261,1262,1263,1266,1267,1268,1269,1270,1271,1272,1273,1274,1275,1276,1282,1318,1323,1324,1325,1327,1328,1329,1330,1331,1332,1333,1334,1337,1338,1339,1340,1341,1342,1343</value>
    </filters>
    <label>Freight CSU Customer Articles</label>
</ListView>