force-app/main/default/objects/Knowledge__kav/listViews/Freight_CSU_Training_Articles.listView-meta.xml
<ListView>
    <fullName>Freight_CSU_Training_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Qantas_Freight</value>
    </filters>
    <label>Freight CSU Training Articles</label>
</ListView>