force-app/main/default/objects/Knowledge__kav/listViews/Informational_Articles.listView-meta.xml
<ListView>
    <fullName>Informational_Articles</fullName>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>Question__c</columns>
    <columns>Answer__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>OWNER_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Informational_Article</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Informational Articles</label>
    <sharedTo>
        <group>Service_Delivery_Content_Authors</group>
        <group>Service_Delivery_Read_Write</group>
    </sharedTo>
</ListView>