force-app/main/default/objects/Knowledge__kav/listViews/Internal_articles_View_count_50.listView-meta.xml
<ListView>
    <fullName>Internal_articles_View_count_50</fullName>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>ARTICLE_TOTAL_VIEW_COUNT</columns>
    <columns>Question__c</columns>
    <columns>Answer__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Internal_Knowledge_QCC_Article</value>
    </filters>
    <label>Internal Knowledge: QCC Article</label>
</ListView>