force-app/main/default/objects/Knowledge__kav/listViews/Internal_Knowledge.listView-meta.xml
<ListView>
    <fullName>Internal_Knowledge</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>TITLE</columns>
    <columns>Question__c</columns>
    <columns>ARTICLE_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Informational_Article,Knowledge__kav.Marketing_and_Promotional,Knowledge__kav.Policy,Knowledge__kav.Process_and_Procedure,Knowledge__kav.Triage_Article</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Internal Articles Updated in Last 7 Days</label>
</ListView>